[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "concrete-pump-cpa-mcp"
readme = "README.md"
version = "1.0.7"
description = "CPA Concrete Pumping Group standards, pump operator certification, BS EN 12001 ground bearing capacity, exclusion zones."
license = {file = "LICENSE"}
requires-python = ">=3.10"
authors = [{name = "MEOK AI Labs", email = "hello@meok.ai"}]
keywords = ["concrete-pump", "cpa", "bs-en-12001", "pump-operator", "ground-bearing", "mcp"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
]
dependencies = ["mcp>=1.0.0"]

[project.urls]
Homepage = "https://meok.ai"
Repository = "https://github.com/CSOAI-ORG/concrete-pump-cpa-mcp"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["server.py"]

[project.scripts]
concrete-pump-cpa-mcp = "server:main"
